Implement user display in UserPage